--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-employee></app-employee>
+<app-header></app-header>
+<button (click)="addEmployee()">Populate</button>
+<app-employee (addEvent)="addEventHandler($event)" [employees]="employees"></app-employee>
+<app-footer></app-footer>
